Lesson 8: create api & docs product api
