# backend_fefu_3_6/api-docs.json
@@ -344,7 +344,7 @@
                 }
             }
         },
-        "\/api\/Categories": {
+        "\/api\/сategories": {
             "get": {
                 "tags": [
                     "categories"
@@ -372,7 +372,7 @@
                 }
             }
         },
-        "\/api\/Categories\/{Category}": {
+        "\/api\/сategories\/{сategory}": {
             "get": {
                 "tags": [
                     "categories"
@@ -380,7 +380,7 @@
                 "summary": "Display Categories through slug.",
                 "parameters": [
                     {
-                        "name": "Category",
+                        "name": "сategory",
                         "in": "path",
                         "required": true,
                         "schema": {
@@ -398,6 +398,91 @@
                                     "properties": {
                                         "data": {
                                             "$ref": "#\/components\/schemas\/Categories"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                }
+            }
+        },
+        "\/api\/catalog\/product\/list": {
+            "get": {
+                "tags": [
+                    "products"
+                ],
+                "summary": "Display all products category.",
+                "parameters": [
+                    {
+                        "name": "category_slug",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application\/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#\/components\/schemas\/Product"
+                                            }
+                                        },
+                                        "links": {
+                                            "$ref": "#\/components\/schemas\/PoginatorLinks"
+                                        },
+                                        "meta": {
+                                            "$ref": "#\/components\/schemas\/PoginatorMeta"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                }
+            }
+        },
+        "\/api\/catalog\/product\/details": {
+            "get": {
+                "tags": [
+                    "products"
+                ],
+                "summary": "Display product by slug.",
+                "parameters": [
+                    {
+                        "name": "product_slug",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "content": {
+                            "application\/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#\/components\/schemas\/Product"
                                         }
                                     }
                                 }
@@ -525,6 +610,23 @@
                     }
                 }
             },
+            "Product": {
+                "type": "object",
+                "properties": {
+                    "id": {
+                        "type": "string"
+                    },
+                    "name": {
+                        "type": "string"
+                    },
+                    "slug": {
+                        "type": "string"
+                    },
+                    "price": {
+                        "type": "string"
+                    }
+                }
+            },
             "User": {
                 "type": "object",
                 "properties": {
@@ -594,6 +696,10 @@
         {
             "name": "categories",
             "description": "Categories"
+        },
+        {
+            "name": "products",
+            "description": "Products"
         }
     ]
 }
