# backend_fefu_3_6/app/Http/Controllers/Api/ProductApiController.php
@@ -1,0 +1,81 @@
+<?php
+
+namespace App\Http\Controllers\Api;
+
+use App\Http\Controllers\Controller;
+use App\Http\Resources\ProductResources;
+use App\Models\Product;
+use App\Models\ProductCategory;
+use App\OpenApi\Parameters\CategoriesParameters;
+use App\OpenApi\Parameters\CategoryNameParameters;
+use App\OpenApi\Parameters\ProductNameParameters;
+use App\OpenApi\Responses\catalog\products\AllProductsCategories;
+use App\OpenApi\Responses\catalog\products\ListProductsResponse;
+use App\OpenApi\Responses\catalog\products\ShowProductResponse;
+use App\OpenApi\Responses\FailedValidationResponse;
+use App\OpenApi\Responses\NotFoundResponse;
+use Illuminate\Http\Request;
+use Vyuldashev\LaravelOpenApi\Attributes as OpenApi;
+
+#[OpenApi\PathItem]
+class ProductApiController extends Controller
+{
+    /**
+     * Display product by slug.
+     *
+     * @return Responsable
+     */
+    #[OpenApi\Operation(tags: ['products'])]
+    #[OpenApi\Parameters(factory: ProductNameParameters::class)]
+    #[OpenApi\Response(factory: ShowProductResponse::class, statusCode: 200)]
+    #[OpenApi\Response(factory: NotFoundResponse::class, statusCode: 404)]
+    public function show(Request $request)
+    {
+        $productSlug = $request['product_slug'];
+
+        $product = Product::query()
+            ->with('productCategory','sortedAttributeValues.productAttribute')
+            ->where('slug', $productSlug)
+            ->first();
+
+        if($product === null){
+            abort(404);
+        }
+
+        return new ProductResources(
+            $product
+        );
+    }
+
+    /**
+     * Display all products category.
+     *
+     * @return Responsable
+     */
+    #[OpenApi\Operation(tags: ['products'])]
+    #[OpenApi\Parameters(factory: CategoryNameParameters::class)]
+    #[OpenApi\Response(factory: AllProductsCategories::class, statusCode: 200)]
+    #[OpenApi\Response(factory: NotFoundResponse::class, statusCode: 404)]
+    public function index(Request $request)
+    {
+        $categorySlug = $request['category_slug'];
+
+        $query = ProductCategory::query()->with('children', 'products');
+
+        if ($categorySlug === null) {
+            $query->where('parent_id');
+        }else{
+            $query->where('slug', $categorySlug);
+        }
+
+        $categories = $query->get();
+        $products = ProductCategory::getTreeProductBuilder($categories)
+            ->orderBy('id')
+            ->paginate();
+
+        return ProductResources::collection(
+            $products
+        );
+
+    }
+}
