# backend_fefu_3_6/app/OpenApi/Responses/catalog/products/ShowProductResponse.php
@@ -1,26 +1,23 @@
 <?php
 
-namespace App\OpenApi\Responses\catalog;
+namespace App\OpenApi\Responses\catalog\products;
 
-use App\OpenApi\Schemas\CategoriesSchema;
+use App\OpenApi\Schemas\ProductsCatalogSchema;
 use GoldSpecDigital\ObjectOrientedOAS\Objects\MediaType;
 use GoldSpecDigital\ObjectOrientedOAS\Objects\Response;
 use GoldSpecDigital\ObjectOrientedOAS\Objects\Schema;
-use Vyuldashev\LaravelOpenApi\Contracts\Reusable;
 use Vyuldashev\LaravelOpenApi\Factories\ResponseFactory;
 
-class AllCategoriesResponse extends ResponseFactory
+class ShowProductResponse extends ResponseFactory
 {
     public function build(): Response
     {
         return Response::ok()
             ->description('Successful response')
             ->content(
-                MediaType::json()->schema(
-                    Schema::object()->properties(
-                        Schema::array('data')->items(CategoriesSchema::ref()),
-                    )
-                )
+                MediaType::json()->schema(Schema::object()->properties(
+                    ProductsCatalogSchema::ref('data')
+                ))
             );
     }
 }
